tests/baselines/reference/baseClassOutOfOrder.errors.txt
tests/cases/compiler/baseClassOutOfOrder.ts(1,17): error TS2653: Base expression references type before it is declared.


==== tests/cases/compiler/baseClassOutOfOrder.ts (1 errors) ====
    class B extends A {
                    ~
!!! error TS2653: Base expression references type before it is declared.
        constructor(msg: string) {
            super(msg);
        }
    }
    
    class A {
        constructor(public msg: string) {
    
        }
    }